# 1brc

./: CMakeLists.txt  test.sh
src/: 1brc.cpp  FGL_DEFINES.hpp
